[gd_scene load_steps=31 format=2]

[ext_resource path="res://tilesets/house/house1.tres" type="TileSet" id=1]
[ext_resource path="res://tilesets/house/rug/rug1.tres" type="TileSet" id=2]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=3]
[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/interfaces/Light-Effects.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/table/Table.gd" type="Script" id=6]
[ext_resource path="res://objects/table/Table.tscn" type="PackedScene" id=7]
[ext_resource path="res://classes/DialogueResource.gd" type="Script" id=8]
[ext_resource path="res://characters/player/light_mask2d.png" type="Texture" id=9]
[ext_resource path="res://characters/player/light2d.png" type="Texture" id=10]
[ext_resource path="res://tilesets/blood/blood1.png" type="Texture" id=11]
[ext_resource path="res://levels/interfaces/LightMask2D.tscn" type="PackedScene" id=12]
[ext_resource path="res://objects/table/1F_main_room_lanternTable.tres" type="Resource" id=13]
[ext_resource path="res://objects/door/Door.gd" type="Script" id=14]
[ext_resource path="res://gui/inventory/InventoryGUI.gd" type="Script" id=15]
[ext_resource path="res://objects/StaticObject.gd" type="Script" id=16]
[ext_resource path="res://levels/LightEffects.gd" type="Script" id=17]
[ext_resource path="res://objects/bookshelf/Bookshelf.tscn" type="PackedScene" id=18]
[ext_resource path="res://gui/inventory/Inventory.tscn" type="PackedScene" id=19]
[ext_resource path="res://tilesets/house/staircase/Staircase.tscn" type="PackedScene" id=20]
[ext_resource path="res://objects/door/Door.tscn" type="PackedScene" id=21]
[ext_resource path="res://tilesets/house/ledge/ledge.tres" type="TileSet" id=22]
[ext_resource path="res://tilesets/blood/blood2.png" type="Texture" id=23]
[ext_resource path="res://objects/paintings/painting-1.png" type="Texture" id=24]
[ext_resource path="res://objects/paintings/painting-2.png" type="Texture" id=25]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3
light_mode = 1

[sub_resource type="Resource" id=2]
script = ExtResource( 8 )
Text = [ "A dusty bookshelf." ]
Answers = {
}
item_name = ""
item_quantity = 0
item_type = 0
read_box_text = ""

[sub_resource type="Resource" id=3]
script = ExtResource( 8 )
Text = [  ]
Answers = {
}
item_name = ""
item_quantity = 0
item_type = 0
read_box_text = ""

[sub_resource type="Resource" id=4]
script = ExtResource( 8 )
Text = [ "The door is locked." ]
Answers = {
}
item_name = ""
item_quantity = 0
item_type = 0
read_box_text = ""

[sub_resource type="Resource" id=5]
script = ExtResource( 8 )
Text = [ "wooo locked" ]
Answers = {
}
item_name = ""
item_quantity = 0
item_type = 0
read_box_text = ""

[node name="1F_main_room" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="." groups=[
"persist",
"save",
] instance=ExtResource( 4 )]
position = Vector2( 128, 147.164 )
z_index = 3
collision_mask = 12
script = ExtResource( 3 )
deaccel = 0.4
speed = 2.0
sprint_speed = 48.0
stagger_speed = 16.0
walk_step_interval = 0.7
sprint_step_interval = 0.5
look_dir = Vector2( 0, -1 )

[node name="HouseF1" type="TileMap" parent="."]
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
occluder_light_mask = 0
format = 1
tile_data = PoolIntArray( -196607, 14, 0, -196606, 14, 0, -196605, 14, 0, -196604, 14, 0, -196603, 14, 0, -196602, 14, 0, -196599, 14, 0, -196598, 14, 0, -196597, 14, 0, -196596, 14, 0, -196595, 14, 0, -196594, 14, 0, -131071, 18, 0, -131070, 18, 0, -131069, 18, 0, -131068, 18, 0, -131067, 18, 0, -131066, 18, 0, -131063, 18, 0, -131062, 18, 0, -131061, 18, 0, -131060, 18, 0, -131059, 18, 0, -131058, 18, 0, -131057, 2, 0, -65536, 5, 0, -65535, 15, 0, -65534, 15, 0, -65533, 15, 0, -65532, 15, 0, -65531, 15, 0, -65530, 15, 0, -65527, 15, 0, -65526, 15, 0, -65525, 15, 0, -65524, 15, 0, -65523, 15, 0, -65522, 15, 0, -65521, 3, 0, 0, 5, 0, 1, 17, 0, 2, 17, 0, 3, 17, 0, 4, 17, 0, 5, 17, 0, 6, 17, 0, 9, 17, 0, 10, 17, 0, 11, 17, 0, 12, 17, 0, 13, 17, 0, 14, 17, 0, 15, 11, 0, 16, 2, 0, 65536, 5, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 15, 0, 65552, 3, 0, 196607, 6, 0, 131072, 5, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 10, 0, 131088, 7, 0, 196608, 5, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 3, 0, 262144, 5, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 3, 0, 327680, 5, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 3, 0, 458751, 9, 0, 393216, 12, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 11, 0, 393232, 2, 0, 524287, 5, 0, 458752, 15, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 15, 0, 458768, 3, 0, 589823, 8, 0, 524288, 13, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 10, 0, 524304, 7, 0, 655359, 6, 0, 589824, 5, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 3, 0, 720895, 6, 0, 655360, 8, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 13, 0, 655367, 1, 0, 655368, 1, 0, 655369, 10, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 7, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 6, 0, 851977, 6, 0, 851978, 6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="HouseF2" type="TileMap" parent="."]
position = Vector2( 128, 160 )
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
occluder_light_mask = 0
format = 1
tile_data = PoolIntArray( -1179658, 9, 0, -1179657, 14, 0, -1179656, 14, 0, -1179655, 14, 0, -1179654, 14, 0, -1179653, 14, 0, -1179652, 14, 0, -1179651, 14, 0, -1179650, 14, 0, -1179649, 14, 0, -1245184, 14, 0, -1245183, 14, 0, -1245182, 14, 0, -1245181, 14, 0, -1245180, 14, 0, -1245179, 14, 0, -1245178, 14, 0, -1245177, 14, 0, -1245176, 14, 0, -1245175, 2, 0, -1114123, 6, 0, -1114122, 5, 0, -1114121, 15, 0, -1114120, 15, 0, -1114119, 15, 0, -1114118, 15, 0, -1114117, 15, 0, -1114116, 15, 0, -1114115, 15, 0, -1114114, 15, 0, -1114113, 15, 0, -1179648, 15, 0, -1179647, 15, 0, -1179646, 15, 0, -1179645, 15, 0, -1179644, 15, 0, -1179643, 15, 0, -1179642, 15, 0, -1179641, 15, 0, -1179640, 15, 0, -1179639, 3, 0, -1179638, 6, 0, -1048587, 9, 0, -1048586, 12, 0, -1048585, 18, 0, -1048584, 18, 0, -1048583, 18, 0, -1048582, 18, 0, -1048581, 18, 0, -1048580, 18, 0, -1048579, 18, 0, -1048578, 18, 0, -1048577, 18, 0, -1114112, 18, 0, -1114111, 18, 0, -1114110, 18, 0, -1114109, 18, 0, -1114108, 18, 0, -1114107, 18, 0, -1114106, 18, 0, -1114105, 18, 0, -1114104, 18, 0, -1114103, 11, 0, -1114102, 2, 0, -983051, 5, 0, -983050, 15, 0, -983049, 17, 0, -983048, 17, 0, -983047, 17, 0, -983046, 17, 0, -983045, 17, 0, -983044, 17, 0, -983043, 17, 0, -983042, 17, 0, -983041, 17, 0, -1048576, 17, 0, -1048575, 17, 0, -1048574, 17, 0, -1048573, 17, 0, -1048572, 17, 0, -1048571, 17, 0, -1048570, 17, 0, -1048569, 17, 0, -1048568, 17, 0, -1048567, 15, 0, -1048566, 3, 0, -917515, 8, 0, -917514, 13, 0, -917513, 1, 0, -917512, 1, 0, -917511, 1, 0, -917510, 1, 0, -917509, 1, 0, -917508, 1, 0, -917507, 1, 0, -917506, 1, 0, -917505, 1, 0, -983040, 1, 0, -983039, 1, 0, -983038, 1, 0, -983037, 1, 0, -983036, 1, 0, -983035, 1, 0, -983034, 1, 0, -983033, 1, 0, -983032, 1, 0, -983031, 10, 0, -983030, 7, 0, -851979, 6, 0, -851978, 5, 0, -851977, 1, 0, -851976, 1, 0, -851975, 1, 0, -851974, 1, 0, -851973, 1, 0, -851972, 1, 0, -851971, 1, 0, -851970, 1, 0, -851969, 1, 0, -917504, 1, 0, -917503, 1, 0, -917502, 1, 0, -917501, 1, 0, -917500, 1, 0, -917499, 1, 0, -917498, 1, 0, -917497, 1, 0, -917496, 1, 0, -917495, 3, 0, -917494, 6, 0, -786443, 6, 0, -786442, 8, 0, -786441, 4, 0, -786440, 13, 0, -786439, 1, 0, -786438, 1, 0, -786437, 1, 0, -786436, 1, 0, -786435, 1, 0, -786434, 1, 0, -786433, 1, 0, -851968, 1, 0, -851967, 1, 0, -851966, 1, 0, -851965, 1, 0, -851964, 1, 0, -851963, 1, 0, -851962, 1, 0, -851961, 10, 0, -851960, 4, 0, -851959, 7, 0, -851958, 6, 0, -720907, 6, 0, -720906, 6, 0, -720905, 6, 0, -720904, 5, 0, -786425, 3, 0, -786424, 6, 0, -786423, 6, 0, -786422, 6, 0, -655367, 18, 0, -655366, 18, 0, -655365, 18, 0, -655364, 18, 0, -655363, 18, 0, -655362, 18, 0, -720895, 18, 0, -720894, 18, 0, -720893, 18, 0, -720892, 18, 0, -720891, 18, 0, -720890, 18, 0, -720888, 6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rug" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327680, 6, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 2, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 2, 0, -327665, 7, 0, -262144, 9, 0, -262143, 4, 0, -262142, 4, 0, -262141, 4, 0, -262140, 4, 0, -262139, 4, 0, -262138, 4, 0, -262137, 4, 0, -262136, 4, 0, -262135, 4, 0, -262134, 4, 0, -262133, 4, 0, -262132, 4, 0, -262131, 4, 0, -262130, 4, 0, -262129, 8, 0, 196611, 6, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 7, 0, 262147, 5, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 3, 0, 327683, 5, 0, 327684, 1, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 3, 0, 393219, 5, 0, 393220, 1, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 1, 0, 393228, 3, 0, 458755, 5, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 3, 0, 524291, 9, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 8, 0 )

[node name="Ledge" type="TileMap" parent="."]
position = Vector2( 0, -16 )
z_index = 3
tile_set = ExtResource( 22 )
cell_size = Vector2( 16, 16 )
occluder_light_mask = 2
format = 1
tile_data = PoolIntArray( -131071, 5, 0, -131070, 5, 0, -131069, 5, 0, -131068, 5, 0, -131067, 5, 0, -131066, 5, 0, -131063, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131058, 5, 0 )

[node name="CanvasModulate" type="CanvasModulate" parent="." instance=ExtResource( 5 )]
color = Color( 0.05, 0.05, 0.05, 1 )
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LightMask2D" type="Sprite" parent="CanvasLayer" instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0.109804 )
material = SubResource( 1 )
position = Vector2( 128, 98 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryGUI" type="Control" parent="CanvasLayer" instance=ExtResource( 19 )]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 40.5, 60 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
player_path = NodePath("../../../1F_main_room/Player")

[node name="Staircase" type="StaticBody2D" parent="." instance=ExtResource( 20 )]
position = Vector2( 128, 3.29613 )
scale = Vector2( 1, 1.5 )

[node name="Furniture" type="Node2D" parent="."]
position = Vector2( 8, 71.864 )

[node name="Bookshelf" type="StaticBody2D" parent="Furniture" instance=ExtResource( 18 )]
position = Vector2( 160, -71.8641 )
script = ExtResource( 16 )
dialogue = SubResource( 2 )

[node name="Table" type="StaticBody2D" parent="Furniture" groups=[
"save",
] instance=ExtResource( 7 )]
position = Vector2( 144, 72.136 )
collision_layer = 3
script = ExtResource( 6 )
dialogue = ExtResource( 13 )

[node name="Table2" type="StaticBody2D" parent="Furniture" groups=[
"save",
] instance=ExtResource( 7 )]
position = Vector2( 16, 48.136 )
collision_layer = 3
script = ExtResource( 6 )
dialogue = SubResource( 3 )

[node name="BloodSplatters" type="Node2D" parent="."]

[node name="Blood2" type="Sprite" parent="BloodSplatters"]
position = Vector2( 168, 32 )
texture = ExtResource( 23 )

[node name="Blood1" type="Sprite" parent="BloodSplatters"]
position = Vector2( 216, 40 )
texture = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 128, 131.201 )
rotation = -3.14159
scale = Vector2( 1, 1.39066 )
texture = ExtResource( 10 )
color = Color( 0.784314, 0.941176, 1, 1 )
energy = 0.35

[node name="Paintings" type="Node2D" parent="."]

[node name="1" type="Sprite" parent="Paintings"]
position = Vector2( 80, -16 )
texture = ExtResource( 24 )
offset = Vector2( 8, 8 )

[node name="2" type="Sprite" parent="Paintings"]
position = Vector2( 96, -25.25 )
texture = ExtResource( 25 )
offset = Vector2( 8, 8 )

[node name="Paintings2" type="Node2D" parent="."]
position = Vector2( 96, -96 )

[node name="1" type="Sprite" parent="Paintings2"]
position = Vector2( 80, -16 )
texture = ExtResource( 24 )
offset = Vector2( 8, 8 )

[node name="2" type="Sprite" parent="Paintings2"]
position = Vector2( 64, -16 )
texture = ExtResource( 25 )
offset = Vector2( 8, 8 )

[node name="Doors" type="Node2D" parent="."]

[node name="Door4" type="Area2D" parent="Doors" instance=ExtResource( 21 )]
visible = false
position = Vector2( 8, 120 )
collision_layer = 2
script = ExtResource( 14 )
scene_name = "1F_west_hall"
locked = true
locked_dialogue = SubResource( 4 )
unlocked_text = ""
key_name = "Silver Key"
inventory_gui_path = NodePath("../../CanvasLayer/InventoryGUI")
player_path = NodePath("../../Player")
required_look_dir = Vector2( -1, 0 )

[node name="Door3" type="Area2D" parent="Doors" instance=ExtResource( 21 )]
visible = false
position = Vector2( -24, -88 )
script = ExtResource( 14 )
scene_name = "2F_west_small_room"
locked = false
locked_dialogue = SubResource( 5 )
unlocked_text = ""
key_name = "asdfgadfsg"
inventory_gui_path = NodePath("../../CanvasLayer/InventoryGUI")
player_path = NodePath("../../Player")
required_look_dir = Vector2( -1, 0 )

[node name="Door" type="Area2D" parent="Doors" instance=ExtResource( 21 )]
visible = false
position = Vector2( 120.692, 135.864 )
script = ExtResource( 14 )
scene_name = ""
locked = true
locked_dialogue = null
unlocked_text = ""
key_name = ""
inventory_gui_path = NodePath("../../CanvasLayer/InventoryGUI")
player_path = NodePath("../../Player")
required_look_dir = Vector2( 0, 1 )

[node name="Door2" type="Area2D" parent="Doors" instance=ExtResource( 21 )]
visible = false
position = Vector2( 135.492, 135.864 )
script = ExtResource( 14 )
scene_name = ""
locked = true
locked_dialogue = null
unlocked_text = ""
key_name = ""
inventory_gui_path = NodePath("../../CanvasLayer/InventoryGUI")
player_path = NodePath("../../Player")
required_look_dir = Vector2( 0, 1 )

[node name="Door5" type="Area2D" parent="Doors" instance=ExtResource( 21 )]
visible = false
position = Vector2( 250.309, 24 )
script = ExtResource( 14 )
scene_name = "1F_kitchen"
locked = false
locked_dialogue = null
unlocked_text = ""
key_name = ""
inventory_gui_path = NodePath("../../CanvasLayer/InventoryGUI")
player_path = NodePath("../../Player")
required_look_dir = Vector2( 1, 0 )

[node name="Door6" type="Area2D" parent="Doors" instance=ExtResource( 21 )]
position = Vector2( 280, -88 )
script = ExtResource( 14 )
scene_name = "2F_east_main_hall"
locked = false
locked_dialogue = null
unlocked_text = ""
key_name = ""
inventory_gui_path = NodePath("../../CanvasLayer/InventoryGUI")
player_path = NodePath("../../Player")
required_look_dir = Vector2( 1, 0 )

[connection signal="inventory_closed" from="CanvasLayer/InventoryGUI" to="Player" method="_on_InventoryGUI_inventory_closed"]
[connection signal="inventory_opened" from="CanvasLayer/InventoryGUI" to="Player" method="_on_InventoryGUI_inventory_opened"]
[connection signal="body_entered" from="Doors/Door4" to="Doors/Door4" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Doors/Door4" to="Doors/Door4" method="_on_Door_body_exited"]
[connection signal="body_entered" from="Doors/Door3" to="Doors/Door3" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Doors/Door3" to="Doors/Door3" method="_on_Door_body_exited"]
[connection signal="body_entered" from="Doors/Door" to="Doors/Door" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Doors/Door" to="Doors/Door" method="_on_Door_body_exited"]
[connection signal="body_entered" from="Doors/Door2" to="Doors/Door2" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Doors/Door2" to="Doors/Door2" method="_on_Door_body_exited"]
[connection signal="body_entered" from="Doors/Door5" to="Doors/Door5" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Doors/Door5" to="Doors/Door5" method="_on_Door_body_exited"]
[connection signal="body_entered" from="Doors/Door6" to="Doors/Door6" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Doors/Door6" to="Doors/Door6" method="_on_Door_body_exited"]
